[package]
name = "toydb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
dialoguer = { version = "0.11.0", features = ["history"] }
prettytable-rs = "0.10.0"
signal-hook = "0.3.17"

[dev-dependencies]
tempfile = "3.9.0"
